# mcp-openai-images-audio

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/mcp_openai_images_audio/: __init__.py  __main__.py  client.py  image_inspect.py  logger.py  paths.py  pricing.py  server.py
src/mcp_openai_images_audio/prompts/: __init__.py  workflow.py
src/mcp_openai_images_audio/resources/: __init__.py  image_guide.md
src/mcp_openai_images_audio/tools/: __init__.py  image.py
tests/: test_paths.py
