[project]
name = "mcp-openai-images-audio"
version = "0.1.0"
description = "MCP server exposing OpenAI gpt-image-2 image generation and editing as a single tool for Claude Code and other MCP clients."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "eduard256" }]
requires-python = ">=3.12"
keywords = [
    "mcp",
    "model-context-protocol",
    "claude",
    "claude-code",
    "anthropic",
    "openai",
    "gpt-image",
    "image-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "openai>=1.50.0",
    "pydantic>=2.0",
    "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/eduard256/mcp-openai-images-audio"
Repository = "https://github.com/eduard256/mcp-openai-images-audio"
Issues = "https://github.com/eduard256/mcp-openai-images-audio/issues"

[project.scripts]
# CLI entry point — installed as `mcp-openai-images-audio` on PATH.
mcp-openai-images-audio = "mcp_openai_images_audio.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_openai_images_audio"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp_openai_images_audio",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "docs",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
